Fixed layout issues iphone

--- a/photos/WebContent/app/photoswiper.css
+++ b/photos/WebContent/app/photoswiper.css
@@ -6,8 +6,7 @@
 	--background: #000000;
 }
 
-html,
-body {
+html, body {
 	height: 100%;
 }
 
@@ -18,7 +17,7 @@ body {
 }
 
 .modal {
-	max-width: 80%;
+	max-width: 90vw;
 }
 
 .swiper {
@@ -75,13 +74,13 @@ body {
 	color: var(--foreground);
 }
 
-@media (orientation : landscape) {
+@media ( orientation : landscape) {
 	.swiper-slide img {
 		height: 100%;
 	}
 }
 
-@media (orientation : portrait) {
+@media ( orientation : portrait) {
 	.swiper-slide img {
 		width: 100%;
 	}
@@ -125,7 +124,6 @@ body {
 /*
 DROPDOWN from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover
 */
-
 .dropbtn {
 	background-color: transparent;
 	color: var(--foreground);
@@ -136,8 +134,7 @@ DROPDOWN from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_d
 	z-index: 6;
 }
 
-.dropbtn:hover,
-.dropbtn:focus {
+.dropbtn:hover, .dropbtn:focus {
 	background-color: var(--foreground);
 }
 
@@ -189,8 +186,7 @@ DROPDOWN from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_d
 }
 
 #map {
-	height: 400px;
-	width: 100%;
+	height: 70vh;
 }
 
 .title {
@@ -213,27 +209,35 @@ DROPDOWN from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_d
 }
 
 #loader {
-            border: 12px solid; 
-            border-color: var(--accent);
-            border-radius: 50%;
-            border-top: 12px solid #444444;
-            width: 70px;
-            height: 70px;
-            animation: spin 1s linear infinite;
-            
-        }
- 
-        .center {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: auto;
-        }
- 
-        @keyframes spin {
-            100% {
-                transform: rotate(360deg);
-            }
-        }
+	border: 12px solid;
+	border-color: var(--accent);
+	border-radius: 50%;
+	border-top: 12px solid #444444;
+	width: 70px;
+	height: 70px;
+	animation: spin 1s linear infinite;
+}
+
+.center {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+/* iPhone [portrait + landscape] */
+@media only screen and (max-device-width: 480px) {
+	.dropdown-content {
+		font-size: xx-large;
+		min-width: 400px;
+	}
+	.title {
+		font-size: xx-large;
+	}
+	
+	.photo-info td {
+		font-size: xx-large;
+	}
+}
